# Bhoomichain

./: AGENTS.md  Cargo.toml  README.md  index.html  package-lock.json  package.json  tailwind.config.js
contracts/aggregation-deal/: Cargo.toml
contracts/aggregation-deal/src/: lib.rs  test.rs
contracts/dispute-dao/: Cargo.toml
contracts/dispute-dao/src/: lib.rs  test.rs
contracts/parcel-token/: Cargo.toml
contracts/parcel-token/src/: lib.rs  test.rs
contracts/verifier-registry/: Cargo.toml
contracts/verifier-registry/src/: lib.rs  test.rs
crates/bhoomi-math/: Cargo.toml
crates/bhoomi-math/src/: lib.rs  tests.rs
src/: App.tsx  index.css  main.tsx
src/components/: AggregationDonut.tsx  BlockchainString.tsx  DocumentCard.tsx  ParcelCard.tsx  SendVerificationFee.tsx  StatusBadge.tsx  VerificationStepper.tsx  WalletButton.tsx
src/config/: stellar.ts
src/hooks/: useWallet.ts
src/i18n/: config.ts  en.json  hi.json  kn.json  te.json
src/lib/: aggregationDeal.ts  disputeDao.ts  parcelToken.ts  soroban.ts  stellar.ts  verifierRegistry.ts  walletKit.ts
src/pages/: Landing.tsx
src/pages/corporate/: Dashboard.tsx
src/pages/farmer/: DocumentSubmission.tsx  Home.tsx  PayoutPortal.tsx
src/pages/settings/: Language.tsx
src/pages/verifier/: ParcelVerification.tsx  Workspace.tsx
src/types/: index.ts
src/utils/: errors.ts  format.ts  localRegistry.ts  pdf.ts  validation.ts
